docs/airflow/airflow-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-deployment
  namespace: flowi
  labels:
    app: airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow
  template:
    metadata:
      labels:
        app: airflow
    spec:
      serviceAccountName: airflow
      containers:
      - name: airflow
        imagePullPolicy: Always
        image: localhost:32000/airflow
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: dockersock
            mountPath: "/var/run/docker.sock"
      volumes:
        - name: dockersock
          hostPath:
            path: /var/run/docker.sock
