docs/airflow/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: airflow
  labels:
    app: hello-airflow
spec:
  containers:
  - name: k8s-airflow
    image: localhost:32000/airflow
    ports:
    - containerPort: 8080
