docs/airflow/airflow-service.yml
apiVersion: v1
kind: Service
metadata:
  name: airflow-service
  namespace: flowi
spec:
  selector:
    app: airflow
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
